--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/476c31837b.js" crossorigin="anonymous"></script>
-        <title>Simple Form</title>
+        <title>StockInsight </title>
         <style>
           body {
             font-family: Arial, sans-serif;
@@ -20,18 +20,7 @@
             height: 100%;
             width: 100%;
           }
-          /* #market-status-text {
-              align-self: center;
-              max-width: 50%;
-              display: flex;
-              justify-content: center;
-              margin: 25px;
-              padding: 10px;
-              background-color: #fff;
-              border-radius: 5px;
-              box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.3);
-          } */
-          .container, .min-container, .nav-bar {
+          .container, .min-container, .nav-bar, .sub-section {
               /* max-width: 50%; */
               height: max-content;
               margin: 0 auto;
@@ -45,9 +34,30 @@
             max-width: 50%;
           }
           .min-container {
-            min-width: 280px;
-            height: 100px;
-            padding: 10%;
+            min-width: 300px;
+            max-width: 350px;
+            height: fit-content;
+            padding: 25px;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: space-evenly;
+          }
+          .min-container-indexname {
+            font-size: 200%;
+            font-family: monospace;
+            font-weight: 600;
+          }
+          .min-container-price {
+            font-size: 150%;
+            font-family: monospace;
+            font-weight: 500;
+          } 
+          .min-container-change {
+            font-size: 125%;
+            font-family: monospace;
+            font-weight: 400;
           }
           .nav-bar {
             display: flex;
@@ -57,13 +67,19 @@
             margin: 10px;
             padding: 10px;
           }
+          .sub-section {
+            width: 25%;
+            margin: 20px;
+          }
           .section {
             width: 100%;
             height: fit-content;
             display: flex;
             flex-wrap: nowrap;
             flex-direction: row;
-            padding: 20px;
+            justify-content: space-evenly;
+            margin: 20px auto;
+            padding: 20px 0;
           }
           h1 {
             text-align: center;
@@ -107,41 +123,80 @@
           <i class="fa-solid fa-money-bill-trend-up" style="color: seagreen; font-size: xx-large;">
             <strong style="font-family: cursive; font-size: large;"> StockInsight</strong>
           </i>
-          <strong></strong>
+          <strong>NSE Stock Aanalysis and Prediction</strong>
+          <strong>{{marketstatus}}</strong>
         </div>
         <hr>
-        <div class="section">
-          <div class="min-container"></div>
-          <div class="min-container"></div>
-          <div class="min-container"></div>
+        <div class="section" style="overflow: auto;">
+          {% for index in indexes %}
+          <div class="min-container">
+            <div class="min-container-indexname">{{index['indexName']}}</div>
+            <div class="min-container-price" style="color: goldenrod;">{{index['last']}}</div>
+            {% if index['change'] < 0 %}
+              <div class="min-container-change"  style="color: crimson;">
+                {{index['change']}} ({{index['percChange']}}%)
+                <i class="fa-solid fa-caret-down"></i>
+              </div>
+            {% else %}
+              <div class="min-container-change"  style="color: seagreen;">
+                {{index['change']}} ({{index['percChange']}}%)
+                <i class="fa-solid fa-caret-up"></i>
+              </div>
+            {% endif %}
+          </div>
+          {% endfor %}
+          <!-- <div class="min-container"></div>
+          <div class="min-container"></div> -->
         </div>
         <div class="section">
+          <div class="sub-section">
+            <h1>Top Gainers</h1>
+            <hr>
+            {% for index,stock in listgainers.iterrows() %}  
+            <h5>{{stock['symbol']}}</h5>
+            {% endfor %}
+          </div>
+
           <div class="container">
             <h1>Stock Prediction</h1>
+            <!-- Alerts -->
+            <div class="alert alert-success alert-dismissible fade show" id="success-alert" role="alert">
+              <span></span>
+              <button type="button" class="btn-close" onclick="closeSuccess()" style="position: inherit;margin: 5px;"></button>
+            </div>
+            <div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert">
+              <span></span>
+              <button type="button" class="btn-close" onclick="closeError()" style="position: inherit;margin: 5px;"></button>
+            </div>
+
+            <!-- Form -->
             <form id="myForm" action="/analyze" method="post">
                 <!-- <input type="text" id="symbol" name="symbol" class="form-control" placeholder="Enter Stock Symbol" required> -->
                 <div class="form-floating mb-3">
-                  <input type="email" name="symbol" class="form-control" id="floatingInput" placeholder="Enter Stock Symbol">
+                  <input type="text" name="symbol" class="form-control" id="floatingInput" placeholder="Enter Stock Symbol" required>
                   <label for="floatingInput">Stock Symbol</label>
                 </div>
-                <select name="period" class="form-select" aria-label="Default select example">
-                  <option disabled selected>Open this select menu</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                <select name="period" class="form-select mb-3" aria-label="Default select example" required>
+                  <option value=""  selected>Select a Period</option>
+                  <option value="1d">Next Day </option>
+                  <option value="6m">After 6 Months</option>
+                  <option value="1y">After 1 Year</option>
                 </select>
                 <input type="submit" class="submit-btn" value="Analyze">
             </form>
+            
+          </div> <!-- Container Closing -->
+
+          <div class="sub-section">
+            <h1>Top Losers</h1>
+            <hr>
+            {% for index,stock in listlosers.iterrows() %}  
+            <h5>{{stock['symbol']}}</h5>
+            {% endfor %}
           </div>
-          <div class="alert alert-success alert-dismissible fade show" id="success-alert" role="alert">
-            <span></span>
-            <button type="button" class="btn-close" onclick="closeSuccess()" style="position: inherit;margin: 5px;"></button>
-          </div>
-          <div class="alert alert-danger alert-dismissible fade show" id="error-alert" role="alert">
-            <span></span>
-            <button type="button" class="btn-close" onclick="closeError()" style="position: inherit;margin: 5px;"></button>
-          </div>
-        </div>
+
+          
+        </div> <!-- Section Closing -->
       </div>
 
 
@@ -150,69 +205,85 @@
               integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
               crossorigin="anonymous"></script>
       <script>
+        document.addEventListener("DOMContentLoaded", function() {
+          fetchMarketStatus();
+        });
           
-
-          document.getElementById("myForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            var symbol = document.getElementById("myForm").querySelector('input[name="symbol"]').value;
-            var formData = new FormData();
-            formData.append('symbol', symbol);
-
-            fetch('/analyze', {
-              method: 'POST',
-              body: formData
-            }).then(response => response.json())
-              .then(data => {
-                if (data.type === 'error') {
-                  showError(data.message);
-                } else if (data.type === 'success') {
-                  showSuccess(data.message);
-                  document.getElementById("myForm").reset();
-                }
-              })
-              .catch(error => {
-                console.log('Error:', error);
-              });
+        // Function for on submit for form
+        document.getElementById("myForm").addEventListener("submit", function(event) {
+          event.preventDefault();
+          var form = document.getElementById("myForm");
+          var symbol = form.querySelector('input[name="symbol"]').value;
+          var period = form.querySelector('select[name="period"]').value;
+          var formData = new FormData();
+          formData.append('symbol', symbol);
+          formData.append('period', period);
+          
+          fetch('/analyze', {method: 'POST', body: formData})
+          .then(response => response.json())
+          .then(data => {
+            if (data.type === 'error') {
+              showError(data.message);
+            } else if (data.type === 'success') {
+              showSuccess(data.message);
+              document.getElementById("myForm").reset();
+            }
+          })
+          .catch(error => {
+            console.log('Error:', error);
           });
+        });
+              
+        // Function to fetch Market Staus 
+        function fetchMarketStatus() {
+          var marketStatusDiv = document.getElementById("market-status-text");
+          // marketStatusDiv.lastElementChild.innerText ="Market " + status;
+          var status = marketStatusDiv.lastElementChild.innerText
+          if (status=="Open") {
+            marketStatusDiv.lastElementChild.innerHTML =`<i class="fa-solid fa-circle fa-beat-fade" style="color:seagreen; font-size:large; margin:5px;"> ${status}</i>`; 
+          } else {
+            marketStatusDiv.lastElementChild.innerHTML =`<i class="fa-solid fa-circle fa-beat-fade" style="color:crimson; font-size:small; margin:5px;"> ${status}</i>`;
+          }
+            // fetch('/marketstatus')
+            // .then(response => response.json())
+            // .then(data => {
+            //   showMarketStatus(data.market_status);
+            // })
+            // .catch(error => {
+            //   console.error('Error:', error);
+            // });
+        }
+        // function showMarketStatus(status) {
+        //   var marketStatusDiv = document.getElementById("market-status-text");
+        //   // marketStatusDiv.lastElementChild.innerText ="Market " + status;
+        //   if (status=="Open") {
+        //     marketStatusDiv.lastElementChild.innerHTML =`<i class="fa-solid fa-circle fa-beat-fade" style="color:seagreen; font-size:large; margin:5px;"> ${status}</i>`; 
+        //   } else {
+        //     marketStatusDiv.lastElementChild.innerHTML =`<i class="fa-solid fa-circle fa-beat-fade" style="color:crimson; font-size:small; margin:5px;"> ${status}</i>`;
+        //   }
+        // }
 
-            function fetchMarketStatus() {
-                fetch('/marketstatus')
-                .then(response => response.json())
-                .then(data => {
-                  showMarketStatus(data.market_status);
-                })
-                .catch(error => {
-                  console.error('Error:', error);
-                });
-            }
 
+        // Function for Alert Error for symbol
+        function showError(message) {
+          var errorAlert = document.getElementById("error-alert");
+          errorAlert.style.display = "flex";
+          errorAlert.firstElementChild.innerText=message
+        }
+        function closeError() {
+          document.getElementById("error-alert").style.display = "none";
+        }
 
-            function showError(message) {
-                var errorAlert = document.getElementById("error-alert");
-                errorAlert.style.display = "flex";
-                errorAlert.firstElementChild.innerText=message
-            }
+        // Function for Alert Success for symbol
+        function showSuccess(message) {
+          var successAlert = document.getElementById("success-alert");
+          successAlert.style.display = "flex";
+          successAlert.firstElementChild.innerText=message
+        }
+        function closeSuccess() {
+          document.getElementById("success-alert").style.display = "none";
+        }
 
-            function showSuccess(message) {
-                var successAlert = document.getElementById("success-alert");
-                successAlert.style.display = "flex";
-                successAlert.firstElementChild.innerText=message
-            }
-
-            function showMarketStatus(status) {
-                var marketStatusDiv = document.getElementById("market-status-text");
-                marketStatusDiv.lastElementChild.innerText ="Market " + status;
-            }
-            document.addEventListener("DOMContentLoaded", function() {
-              fetchMarketStatus();
-            });
-
-            function closeSuccess() {
-                document.getElementById("success-alert").style.display = "none";
-            }
-            function closeError() {
-                document.getElementById("error-alert").style.display = "none";
-            }
       </script>
     </body>
 </html>
